# Master-Thesis-Pipeline

./: README.md
pipeline/: README.md
pipeline/raw_files/ligands/: AEUYGRJBDIISBC-MXQXRXRHNA-O_out.sdf
pipeline/stage1_PDBprocessing/: README.md  pdb_processor.ipynb  pyproject.toml
pipeline/stage2_IFP/: IFP_f2f_wrapper.yaml  IFP_wrapper.py  README.md  pyproject.toml
pipeline/stage3_scripts/: README.md  pipeline_engine.py  pipeline_engine_nocofactors.py  pipeline_main.py  pipeline_run_batch_wrapper.py  pipeline_utils.py  pyproject.toml
